--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -13,6 +13,7 @@
             <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
         </table>
     </form>
+    <img src="/images/Haar.screen1.PNG" alt="">
 </div>
 </form>
 </body>
