--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,17 @@
-h1{
+h1 {
+    text-align: center;
+}
+
+#chimg {
+    width: 100%;
+    text-align: center;
+}
+
+#upload {
+    width: 100%;
+    text-align: center;
+}
+#img {
+    width: 100%;
     text-align: center;
 }
